...
                                                <color key="backgroundColor" red="0.90588235289999997" green="0.97254901959999995" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="Lkg-Kf-wIB"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="MxC-9o-bfp"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="9"/>
                                                <state key="normal" title="Connect your account">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="2.5"/>
                                                    </userDefinedRuntimeAttribute>
...
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="35" id="ced-Dt-W3w"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="tzn-7d-KTx"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="9"/>
                                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" title="CLOSE">
                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="5"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                <color key="backgroundColor" red="0.90588235294117647" green="0.97254901960784312" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="VcZ-ct-7zt"/>
                                                    <constraint firstAttribute="height" constant="35" id="lb4-T2-QYt"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="9"/>
                                                <state key="normal" title="Accept and Continue">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="2.5"/>
                                                    </userDefinedRuntimeAttribute>
...
